# Generated by Django 6.0.4 on 2026-05-13 21:41

import core.services
import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Aluno',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=255, verbose_name='Nome Completo')),
                ('matricula', models.CharField(max_length=30, unique=True, verbose_name='Matrícula')),
                ('cpf', models.CharField(max_length=14, unique=True, verbose_name='CPF')),
                ('is_ativo', models.BooleanField(default=True, verbose_name='Status Ativo')),
            ],
            options={
                'verbose_name': 'Aluno',
                'verbose_name_plural': 'Alunos',
            },
        ),
        migrations.CreateModel(
            name='Area',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=20, verbose_name='Nome')),
            ],
            options={
                'verbose_name': 'Area',
                'verbose_name_plural': 'Areas',
            },
        ),
        migrations.CreateModel(
            name='Curso',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=20, verbose_name='Nome')),
                ('areaId', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.area')),
            ],
            options={
                'verbose_name': 'Curso',
                'verbose_name_plural': 'Cursos',
            },
        ),
        migrations.CreateModel(
            name='Processo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('data_criacao', models.DateField(verbose_name='Data de Criação')),
                ('status', models.CharField(choices=[('aberto', 'Aberto'), ('analise_sec', 'Análise Secretaria'), ('', ''), ('pendente', 'Pendente'), ('aprovado', 'Aprovado'), ('reprovado', 'Reprovado'), ('concluido', 'Concluido'), ('cancelado', 'Cancelado')], default='aberto', max_length=15)),
                ('matricula_aluno', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.aluno')),
            ],
            options={
                'verbose_name': 'Processo',
                'verbose_name_plural': 'Processos',
            },
        ),
        migrations.CreateModel(
            name='Contrato',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('arquivo', models.FileField(upload_to=core.services.upload_contrato_path, verbose_name='url do arquivo')),
                ('data_upload', models.DateField(verbose_name='Data de Upload')),
                ('cnpj_empresa', models.CharField(max_length=14, verbose_name='CNPJ da empresa')),
                ('nome_empresa', models.CharField(max_length=255, verbose_name='Nome da empresa')),
                ('data_inicio', models.DateField(verbose_name='Data de Início')),
                ('data_termino', models.DateField(verbose_name='Data de Término')),
                ('apolice_seguro', models.CharField(max_length=100, verbose_name='Apólice de Seguro')),
                ('plano_atividade', models.BooleanField(default=False, verbose_name='Plano de Atividade')),
                ('assinatura_aluno', models.BooleanField(default=False, verbose_name='Assinatura do Aluno')),
                ('assinatura_empresa', models.BooleanField(default=False, verbose_name='Assinatura da Empresa')),
                ('assinatura_faculdade', models.BooleanField(default=False, verbose_name='Assinatura da Faculdade')),
                ('processoId', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.processo', verbose_name='Processo')),
            ],
            options={
                'verbose_name': 'Contrato',
                'verbose_name_plural': 'Contratos',
            },
        ),
    ]
