@startuml

' --- Estilos ---
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

' --- Classes Relevantes ---
abstract class Usuario {
    ' # matricula : int
    ' # nome : string
    ' # email : string
    ' # senha : string
    ' + login() : bool
}

class Secretaria extends Usuario {
    ' + validarContrato(processo : Processo, aprovado : bool, justificativa : string)
    ' + validarRelatorio(processo : Processo, aprovado : bool, justificativa : string)
    ' + pesquisarAlunos(matricula : int) : Aluno[]
    ' + listarProcessosPendentes() : Processo[]
}

class Processo {
}

class Aluno {
}

' --- Relacionamentos ---
Secretaria "1" -- "0..*" Processo : audita >
Secretaria "1" -- "0..*" Aluno : pesquisa >

@enduml
